[gd_scene load_steps=7 format=3 uid="uid://bf8ikbpsd1iik"]

[ext_resource type="Script" uid="uid://b7uwi0ae17r6n" path="res://scripts/play_menu.gd" id="1_md3iu"]
[ext_resource type="Texture2D" uid="uid://byb0w4f4em8su" path="res://assets/photo_6172473668211427352_y.jpg" id="1_q3443"]
[ext_resource type="Texture2D" uid="uid://c5gasqo468yyn" path="res://assets/car_blue_1.png" id="2_2rgue"]

[sub_resource type="Theme" id="Theme_yjqy7"]

[sub_resource type="SystemFont" id="SystemFont_yml5w"]
font_names = PackedStringArray("Fantasy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pgki3"]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color(0.790658, 0.544227, 0.153459, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.791036, 0.83243, 0.537238, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 20.0
expand_margin_right = 20.0
shadow_size = 3

[node name="play_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_md3iu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_q3443")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = 353.0
offset_right = 1049.0
offset_bottom = 490.0
theme_override_constants/separation = 73
alignment = 1

[node name="car_select" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yjqy7")
theme_override_colors/font_hover_color = Color(0.0208331, 0.0190295, 0.0154246, 1)
theme_override_colors/icon_normal_color = Color(0.830736, 0.341863, 0.501238, 1)
theme_override_colors/font_outline_color = Color(0.316916, 0.139054, 0.0324249, 1)
theme_override_colors/font_color = Color(0.0235294, 0.027451, 0.00392157, 1)
theme_override_fonts/font = SubResource("SystemFont_yml5w")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/normal = SubResource("StyleBoxFlat_pgki3")
text = "Cars"
icon_alignment = 1
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/car_select"]
layout_mode = 0
offset_left = 22.0
offset_top = 107.0
offset_right = 93.0
offset_bottom = 238.0
rotation = 4.71239
texture = ExtResource("2_2rgue")
flip_v = true
metadata/_edit_lock_ = true

[node name="map" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yjqy7")
theme_override_colors/font_hover_color = Color(0.0208331, 0.0190295, 0.0154246, 1)
theme_override_colors/icon_normal_color = Color(0.830736, 0.341863, 0.501238, 1)
theme_override_colors/font_outline_color = Color(0.316916, 0.139054, 0.0324249, 1)
theme_override_colors/font_color = Color(0.0235294, 0.027451, 0.00392157, 1)
theme_override_fonts/font = SubResource("SystemFont_yml5w")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/normal = SubResource("StyleBoxFlat_pgki3")
text = "Maps"
metadata/_edit_lock_ = true

[node name="play" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yjqy7")
theme_override_colors/font_hover_color = Color(0.0208331, 0.0190295, 0.0154246, 1)
theme_override_colors/icon_normal_color = Color(0.830736, 0.341863, 0.501238, 1)
theme_override_colors/font_outline_color = Color(0.316916, 0.139054, 0.0324249, 1)
theme_override_colors/font_color = Color(0.0235294, 0.027451, 0.00392157, 1)
theme_override_fonts/font = SubResource("SystemFont_yml5w")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/hover = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_pgki3")
theme_override_styles/normal = SubResource("StyleBoxFlat_pgki3")
text = "Play"
metadata/_edit_lock_ = true

[connection signal="pressed" from="HBoxContainer/car_select" to="." method="_on_car_select_pressed"]
[connection signal="pressed" from="HBoxContainer/map" to="." method="_on_map_pressed"]
[connection signal="pressed" from="HBoxContainer/play" to="." method="_on_play_pressed"]
